# SQLoverParquetRUST

./: Cargo.toml  Org.txt  PseudoC.txt  dotablepost.cmd  query1.sql  query1_result.csv  query2.sql  query2_result.csv  query3.sql  query3_result.csv  query4.sql  query4_result.csv  t_xxx.csv.tmp  t_xxx.parquet
src/: dbstore.rs  main.rs  shared.rs  test.rs  webserver.rs
